--- a/Portifolio/style.css
+++ b/Portifolio/style.css
@@ -83,14 +83,16 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   flex-shrink: 3;
-  align-items: flex-end;
+  align-items: center;
 
   border-top: 0.4px solid #fff2e7;
 }
 
 .portifolio-texth2 {
-  padding-bottom: 25%;
-  padding-left: 20%;
+/*  padding-bottom: 25%;
+  padding-left: 20%;*/
+  display: flex;
+  flex-direction: column;
   font-size: 40px;
 }
 
@@ -99,7 +101,6 @@ body {
   height: 250px;
   padding: 20px;
   border-radius: 60px;
-  padding-top: 10%;
 }
 .portifolio img:hover {
   width: 410px;
