Inicio Projeto Pets life
Iniciei o Projeto Pets life montando o escopo do projeto estruturando e adicionando o html basico

--- a/pets-life/style.css
+++ b/pets-life/style.css
@@ -31,7 +31,11 @@ img {
 
 /*------------Layout--------------*/
 .menu{
+  display: flexbox;
   height: 3rem;
-  background: var(--base-color);
+  background-color:aquamarine;
+
+}
+.conteudo{
 
 }
