--- a/pets-life/style.css
+++ b/pets-life/style.css
@@ -59,17 +59,34 @@ img {
   padding-right: 2rem;
 }
 .conteudo{
-  display: flexbox;
   background-color: rgb(255, 130, 222);
+  height: auto;
   display: flex;
   flex-direction: row;
   align-items: center;
-
- height: auto;
+  justify-content: space-around;
+  gap: 1rem;
 }
 .conteudo-text{
-  flex-direction: column;
+  flex-direction: column-gap;
 
+  font-family: Quicksand;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1rem;
+  line-height: 132.5%;
+}
+.conteuso-button{
+padding-top: 1rem;
+  
+  
+}
+.conteudo button{
+  background-color:aquamarine;
+  border: none;
+  border-radius: 1rem;
+  width: 7rem;
+  height: 3rem;
 }
 .conteudo img{
   width: 60rem;
