--- a/Portifolio/style.css
+++ b/Portifolio/style.css
@@ -85,7 +85,7 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  border-top: 0.4px solid #fff2e7;
+  border-top: 0.4px solid
   margin-bottom: 48px;
   padding: 30px;
 }
@@ -109,7 +109,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  border-top: 0.4px solid #fff2e7;
+  border-top: 0.4px solid 
 }
 .portifolio-text h2 {
   display: flex;
