--- a/betas-pedacos-de-codigo/pLogin/pLogin.css
+++ b/betas-pedacos-de-codigo/pLogin/pLogin.css
@@ -17,12 +17,13 @@ body{
 /*layout*/
 
 .main-login{
-  width:100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  
   display: flex;
   justify-content: center; /*eixo X */
   align-items: center;    /* eixo Y */
-  flex-wrap: wrap;
+
 }
 .menu {
   display: flex;
@@ -30,7 +31,8 @@ body{
   align-items: flex-start;  /*eixo Y  horizontal*/
   flex-direction: column;
   width: 4rem; 
- padding: 0.5rem 0.4rem;
+  height: 10vh;
+
 }
 
 .menu img{
@@ -38,19 +40,19 @@ body{
   height: 4rem;
   border-radius: 7px;
   background: linear-gradient(45deg, #ffcccc 0%, #99ccff 100%);
-  
+  opacity: 0,9;
+  padding: 10px;
+  margin: 10px 10px;
 
 }
 .menu h1{
-  width: 6rem;
   background: linear-gradient(45deg, #ffcccc 0%, #99ccff 100%);
   font-size: 15pt;
   font-weight: bold;
-margin: 0.1rem 0rem;
 }
 .left-login{
-  width: 50%;
-  height: 30vh;
+  width: 50vw;
+  height: 100vh;
   display: flex;
   justify-content: center; /*eixo X */
   align-items: center;    /* eixo Y */
@@ -61,10 +63,10 @@ margin: 0.1rem 0rem;
   color: #55655e;
 }
 .right-login{
-  width: 100vw;
+  width: 50vw;
   height: 100vh;
   display: flex;
-  justify-content: flex-start; /*eixo X */
+  justify-content: center; /*eixo X */
   align-items: center;    /* eixo Y */
   flex-direction: column; 
 }
@@ -75,24 +77,15 @@ margin: 0.1rem 0rem;
 }
 
 .card-login{
+  width: 60%;
   display: flex;
-  justify-content: center; /*eixo X  vertical*/
+  justify-content: center; /*eixo X */
   align-items: center;    /* eixo Y */
   flex-wrap: wrap;
-  background-color: #99ccff;
-  width: 60%;
-  height: 18rem;
-  background: linear-gradient(45deg, #ffcccc 0%, #99ccff 100%);
-  opacity: 1;
-  border: none;
-  border-radius: 1%;
-  padding: 0rem;
-  font-size: 12pt;
+  background: #8875a6d6;
+  padding: 1rem 1rem;
+  border-radius: 20px;
   box-shadow: 0px 10px 40px  #ffcccc;
-  outline: none;
-  box-sizing: border-box;
-  border-radius: 7px;
-
 }
 
 
@@ -101,13 +94,14 @@ margin: 0.1rem 0rem;
   justify-content: center; /*eixo X */
   align-items: flex-start;    /* eixo Y */
   flex-direction: column;
-  }
+  margin: 10px 0px;
+}
 
 .textfild > input{
   width: 100%;
   border: none;
   border-radius: 10px;
-  padding: 0px;
+  padding: 15px;
   background: #51416bd6;
   font-size: 12pt;
   box-shadow: 0px 10px 40px  #ffcccc;
@@ -123,43 +117,41 @@ margin: 0.1rem 0rem;
   color: #f0ffff94;
 }
 
-.btn-login button{
-  width: 10rem;
-  height: 3rem;
-  border: none; 
-  color: white;
-  padding: 1rem 2rem;
-  margin: 0rem;
-  text-align: center;
-  text-decoration: none;
+.btn-login{
+  display: flex;
+  justify-content: center; /*eixo X */
+  align-items:flex-end;    /* eixo Y */
+  flex-direction: row;
+  width: 100%;  
+  padding: 1.1rem 1rem;
+}
+
+.btn-login > a{
+  padding-left: 2rem;
+}
+.btn-login > a button{
+  width: 100%;
+  padding: 1.1rem 1rem;
+  margin: 1rem 0rem;
+  border: none; /*tira borda invisivel do html*/
+  border-radius: 10px;
+  outline: none; /*tira linha invisivel do html*/
   text-transform: uppercase;
-  display: inline-block;
-  font-size: 16px;
+  font-weight: 800;/*fonte Bold*/
+  letter-spacing: 3px;
+  color: #99ccff;
   cursor: pointer;
 }
-.btn-login1 button {
 
-  border-radius: 5px;
-  border-width: 10px;
-  border: #99ccff;
-   background-color: #0d0707;
-}
-.btn-login2 button{
-  width: 100%;
-  height: auto;
-  border-radius: 4px;
-  background-color:white;
-  color: black;
-  border: 2px solid #555555;
-}
-/*Adaptaçãp para telas pequenas
+/*Adaptaçãp para telas pequenas*/
 @media(max-width:900px) {
   .main-login{
     width: 100vw;
     height: 100vh;
+    background: linear-gradient(5deg, #ffcccc 0%, #99ccff 100%);
     display: flex;
-    justify-content: center; 
-    align-items: center;    
+    justify-content: center; /*eixo X */
+    align-items: center;    /* eixo Y */
     flex-direction:column;
 
   }
@@ -167,16 +159,16 @@ margin: 0.1rem 0rem;
   .right-login{
     width: 80vw;
     display: flex;
-    justify-content: center; 
-    align-items: center;  
+    justify-content: center; /*eixo X */
+    align-items: center;  /* eixo Y */
     flex-direction: column; 
   }
 
   .card-login{
     width:100%;
     display: flex;
-    justify-content: center; 
-    align-items: center;   
+    justify-content: center; /*eixo X */
+    align-items: center;    /* eixo Y */
     flex-wrap: wrap;
     background: #8875a6d6;
     padding: 1rem 1rem;
@@ -184,7 +176,15 @@ margin: 0.1rem 0rem;
     border-radius: 20px;
     box-shadow: 0px 10px 40px  #ffcccc;
   }
-  
+
+  .btn-login{
+    display: flex;
+    justify-content: center; /*eixo X */
+    align-items:flex-end;    /* eixo Y */
+    flex-direction: row;
+    width: 50%;  
+    padding: 1.1rem 1rem;
+  }
 }
 
 /*Adaptaçãp para telas grandes*/
@@ -193,10 +193,10 @@ margin: 0.1rem 0rem;
   .card-login{
     width: 50%;
     display: flex;
-    justify-content: center;
-    align-items: center;   
-    flex-direction: column;
-  
+    justify-content: center; /*eixo X */
+    align-items: center;    eixo Y 
+    flex-wrap: wrap;
+    background: #8875a6d6;
     padding: 1rem 1rem;
     border-radius: 20px;
     box-shadow: 0px 10px 40px  #ffcccc;
