--- a/interface/interface.css
+++ b/interface/interface.css
@@ -5,10 +5,9 @@
   font-family: 'Times New Roman', Times, serif;
   box-sizing: border-box;
   text-decoration: none;
-  background-repeat: no-repeat;
 
 }
-.fundo {
+body{
   background: linear-gradient(45deg, #ffcccc 0%, #99ccff 100%);
   background-repeat: no-repeat;
 }
@@ -28,7 +27,7 @@
   border-radius: 7px;
   background: linear-gradient(45deg, #ffcccc 0%, #99ccff 100%);
   opacity: 0,9;
-  padding: 0;
+  padding: 0rem;
   margin: 10px 10px;
 
 }
@@ -67,7 +66,7 @@
 
 }
 .button button{
-  background-color: #4CAF50; /* Green */
+  flex-direction: column;
   border: none; 
   color: white;
   padding: 15px 32px;
@@ -86,12 +85,10 @@
   border-width: 10px;
   border: #99ccff;
   display: flex;
-
  background-color: #0d0707;
 }
 .button2 button{
   width: 100%;
-
   border-radius: 4px;
   background-color:white;
   color: black;
