--- a/interface/pLogin2/pLogin2user.css
+++ b/interface/pLogin2/pLogin2user.css
@@ -23,6 +23,7 @@ body{
   justify-content: center; /*eixo X */
   align-items: center;    /* eixo Y */
   flex-wrap: wrap;
+  flex-direction: column;
 }
 .menu {
   display: flex;
@@ -49,20 +50,32 @@ body{
 margin: 0.1rem 0rem;
 }
 .left-login{
-  width: 50%;
-  height: 30vh;
+  width: 40%;
   display: flex;
   justify-content: center; /*eixo X */
-  align-items: center;    /* eixo Y */
+  align-items: flex-start;    /* eixo Y */
   flex-direction: column;
 }
 
 .left-login > h1{
   color: #55655e;
 }
+.usuario{
+  width: 10rem;
+  height: 9rem;
+ 
+}
+.usuario img{
+  width: 10rem;
+  height: 9rem;
+  border-radius: 7px;
+  background: linear-gradient(45deg, #ffcccc 0%, #99ccff 100%);
+  
+  
+}
 .right-login{
-  width: 100vw;
-  height: 100vh;
+  width: 60%;
+ 
   display: flex;
   justify-content: flex-start; /*eixo X */
   align-items: center;    /* eixo Y */
@@ -80,7 +93,7 @@ margin: 0.1rem 0rem;
   align-items: center;    /* eixo Y */
   flex-wrap: wrap;
   background-color: #99ccff;
-  width: 60%;
+  width: 70%;
   height: 18rem;
   background: linear-gradient(45deg, #ffcccc 0%, #99ccff 100%);
   opacity: 1;
@@ -190,13 +203,20 @@ margin: 0.1rem 0rem;
 /*Adaptaçãp para telas grandes*/
 
 @media(min-width:1024px){
+  .left-login{
+    width: 50%;
+    height: 30vh;
+    display: flex;
+    justify-content: center; /*eixo X */
+    align-items: center;    /* eixo Y */
+    flex-direction: row;
+  }
   .card-login{
     width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;   
-    flex-direction: column;
-  
+   flex-direction: column;
     padding: 1rem 1rem;
     border-radius: 20px;
     box-shadow: 0px 10px 40px  #ffcccc;
